working without bugs

--- a/index.html
+++ b/index.html
@@ -18,7 +18,14 @@
           <input type="text" placeholder="Add your task" />
           <button class="add-btn">Add</button>
         </div>
-        <div class="tasks"></div>
+        <div class="tasks">
+          <!-- <div class="task">
+            <i class="fa-regular fa-circle"></i>
+            <i class="fa-solid fa-circle-check" style="display: none"></i>
+            <p class="task-text">asdfsds sadcsd</p>
+            <i class="fa-solid fa-circle-xmark"></i>
+          </div> -->
+        </div>
       </div>
     </div>
     <script src="script.js"></script>
