--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1>To-Do List 📝</h1>
         <div class="add-task">
           <input type="text" placeholder="Add your task" />
-          <button class="add-btn">Add</button>
+          <button class="add-btn btn">Add</button>
         </div>
         <div class="tasks">
           <!-- <div class="task">
